# Gitti

./: Cargo.toml  README.md
src/: app.rs  git.rs  highlighter.rs  main.rs  theme.rs  types.rs  ui.rs
