[package]
name = "gitti"
version = "0.1.0"
edition = "2021"
description = "A fast, lightweight git diff viewer with IntelliJ-style output"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
git2 = "0.18"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
